# opengl-sandbox

./: .gitmodules  CMakeLists.txt
sandbox/: CMakeLists.txt
src/: model.cpp  shader.cpp
